// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Accordion /> prop className should match snapshot when class name test is passed 1`] = `
<DocumentFragment>
  <div
    aria-label="Accordion Container"
    class="AccordionStyle__Container-sc-7hk6zs-1 bCUcSS aries-accordion test"
    role="region"
  >
    <div
      aria-expanded="false"
      class="AccordionStyle__PanelWrapper-sc-7hk6zs-0 gyCToT panel-wrapper test"
      role="tab"
      tabindex="0"
    >
      <div
        aria-controls="accordion-content-0"
        aria-expanded="false"
        class="AccordionStyle__IconLabelWrapper-sc-7hk6zs-2 kOQHnF label-wrapper"
        id="accordion-heading-0"
        role="button"
        tabindex="-1"
      >
        <div
          class="AccordionStyle__IconWrapper-sc-7hk6zs-6 cJozNU"
        >
          <svg
            class="IconStyle__VerticalCenteredSvg-sc-x7d280-0 cqBxxO"
            data-testid="icon-svg"
            fill="currentColor"
            height="1em"
            viewBox="0 0 100 100"
            width="1em"
          >
            <path
              d="M100 56.563H56.562V100H43.438V56.562H0V43.438h43.438V0h13.124v43.438H100z"
            />
          </svg>
        </div>
        <div
          class="AccordionStyle__Label-sc-7hk6zs-5 kAqwZw"
        >
          label
        </div>
      </div>
      <div
        aria-labelledby="accordion-heading-0"
        class="AccordionStyle__ContentWrapper-sc-7hk6zs-3 iJedH content-wrapper"
        id="accordion-content-0"
        role="region"
      >
        <div
          class="AccordionStyle__Content-sc-7hk6zs-4 hAQoeJ"
        >
          content
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Accordion /> prop className should match snapshot when class name undefined is passed 1`] = `
<DocumentFragment>
  <div
    aria-label="Accordion Container"
    class="AccordionStyle__Container-sc-7hk6zs-1 bCUcSS aries-accordion"
    role="region"
  >
    <div
      aria-expanded="false"
      class="AccordionStyle__PanelWrapper-sc-7hk6zs-0 gyCToT panel-wrapper"
      role="tab"
      tabindex="0"
    >
      <div
        aria-controls="accordion-content-0"
        aria-expanded="false"
        class="AccordionStyle__IconLabelWrapper-sc-7hk6zs-2 kOQHnF label-wrapper"
        id="accordion-heading-0"
        role="button"
        tabindex="-1"
      >
        <div
          class="AccordionStyle__IconWrapper-sc-7hk6zs-6 cJozNU"
        >
          <svg
            class="IconStyle__VerticalCenteredSvg-sc-x7d280-0 cqBxxO"
            data-testid="icon-svg"
            fill="currentColor"
            height="1em"
            viewBox="0 0 100 100"
            width="1em"
          >
            <path
              d="M100 56.563H56.562V100H43.438V56.562H0V43.438h43.438V0h13.124v43.438H100z"
            />
          </svg>
        </div>
        <div
          class="AccordionStyle__Label-sc-7hk6zs-5 kAqwZw"
        >
          label
        </div>
      </div>
      <div
        aria-labelledby="accordion-heading-0"
        class="AccordionStyle__ContentWrapper-sc-7hk6zs-3 iJedH content-wrapper"
        id="accordion-content-0"
        role="region"
      >
        <div
          class="AccordionStyle__Content-sc-7hk6zs-4 hAQoeJ"
        >
          content
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Accordion.Panel /> prop iconPosition should match snapshot when iconPosition left is passed 1`] = `
<DocumentFragment>
  <div
    aria-label="Accordion Container"
    class="AccordionStyle__Container-sc-7hk6zs-1 bCUcSS aries-accordion"
    role="region"
  >
    <div
      aria-expanded="false"
      class="AccordionStyle__PanelWrapper-sc-7hk6zs-0 gyCToT panel-wrapper"
      role="tab"
      tabindex="0"
    >
      <div
        aria-controls="accordion-content-0"
        aria-expanded="false"
        class="AccordionStyle__IconLabelWrapper-sc-7hk6zs-2 kOQHnF label-wrapper"
        id="accordion-heading-0"
        role="button"
        tabindex="-1"
      >
        <div
          class="AccordionStyle__IconWrapper-sc-7hk6zs-6 cJozNU"
        >
          <svg
            class="IconStyle__VerticalCenteredSvg-sc-x7d280-0 cqBxxO"
            data-testid="icon-svg"
            fill="currentColor"
            height="1em"
            viewBox="0 0 100 100"
            width="1em"
          >
            <path
              d="M100 56.563H56.562V100H43.438V56.562H0V43.438h43.438V0h13.124v43.438H100z"
            />
          </svg>
        </div>
        <div
          class="AccordionStyle__Label-sc-7hk6zs-5 kAqwZw"
        >
          label
        </div>
      </div>
      <div
        aria-labelledby="accordion-heading-0"
        class="AccordionStyle__ContentWrapper-sc-7hk6zs-3 iJedH content-wrapper"
        id="accordion-content-0"
        role="region"
      >
        <div
          class="AccordionStyle__Content-sc-7hk6zs-4 hAQoeJ"
        >
          content
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Accordion.Panel /> prop iconPosition should match snapshot when iconPosition right is passed 1`] = `
<DocumentFragment>
  <div
    aria-label="Accordion Container"
    class="AccordionStyle__Container-sc-7hk6zs-1 bCUcSS aries-accordion"
    role="region"
  >
    <div
      aria-expanded="false"
      class="AccordionStyle__PanelWrapper-sc-7hk6zs-0 gyCToT panel-wrapper"
      role="tab"
      tabindex="0"
    >
      <div
        aria-controls="accordion-content-0"
        aria-expanded="false"
        class="AccordionStyle__IconLabelWrapper-sc-7hk6zs-2 bQDRgc label-wrapper"
        id="accordion-heading-0"
        role="button"
        tabindex="-1"
      >
        <div
          class="AccordionStyle__Label-sc-7hk6zs-5 kAqwZw"
        >
          label
        </div>
        <div
          class="AccordionStyle__IconWrapper-sc-7hk6zs-6 ioIpTj"
        >
          <svg
            class="IconStyle__VerticalCenteredSvg-sc-x7d280-0 cqBxxO"
            data-testid="icon-svg"
            fill="currentColor"
            height="1em"
            viewBox="0 0 100 100"
            width="1em"
          >
            <path
              d="M100 25L50 75 0 25z"
            />
          </svg>
        </div>
      </div>
      <div
        aria-labelledby="accordion-heading-0"
        class="AccordionStyle__ContentWrapper-sc-7hk6zs-3 iJedH content-wrapper"
        id="accordion-content-0"
        role="region"
      >
        <div
          class="AccordionStyle__Content-sc-7hk6zs-4 bBDEAR"
        >
          content
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
